force-app/main/default/objects/Site_Decommission__c/Site_Decommission__c.object-meta.xml
<CustomObject>
    <description>Tracks the process of decommisioning a site.</description>
    <label>Site Deconstruction</label>
    <nameField>
        <label>Site Deconstruction Record</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Deconstructions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>