force-app/main/default/objects/Site_Decommission__c/fields/A4815_LstrmModNtce2Ldlrd_Decom_Finish__c.field-meta.xml
<CustomField>
    <fullName>A4815_LstrmModNtce2Ldlrd_Decom_Finish__c</fullName>
    <description>Notice_to_Landlord_Decom

TA4815_LeasTrmModNotice2LLDecom</description>
    <inlineHelpText>Lease term/Mod Notice to Landlord - Decom
A 4815 - 28</inlineHelpText>
    <label>T:(A 4815) LeaseTrm/Mod Notice 2 LL Dcom</label>
    <type>Date</type>
</CustomField>