force-app/main/default/objects/Site_Decommission__c/fields/A4880_RAN_Wilt_Complete_Finish__c.field-meta.xml
<CustomField>
    <fullName>A4880_RAN_Wilt_Complete_Finish__c</fullName>
    <inlineHelpText>Populated for Sprint sites only.
Transmission ended date from Sprint Vision</inlineHelpText>
    <label>T: (A 4880) RAN Wilt Complete</label>
    <type>Date</type>
</CustomField>