force-app/main/default/objects/Site_Decommission__c/fields/Access_Issue__c.field-meta.xml
<CustomField>
    <fullName>Access_Issue__c</fullName>
    <description>Updated Field label per request in work item 000034</description>
    <label>Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access / Contact Information</fullName>
            </value>
            <value>
                <fullName>Property Management / Rent Issues</fullName>
            </value>
            <value>
                <fullName>Leasing Inquiry - SOW/Restoration Language/Entitlements, ETC.</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <isActive>false</isActive>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
                <isActive>false</isActive>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>