force-app/main/default/objects/Site_Decommission__c/fields/Access_Issue_Resolved_Date__c.field-meta.xml
<CustomField>
    <fullName>Access_Issue_Resolved_Date__c</fullName>
    <label>Escalation Issue Resolved Date</label>
    <type>Date</type>
</CustomField>