force-app/main/default/objects/Site_Decommission__c/fields/Active_for_Divestiture_Program__c.field-meta.xml
<CustomField>
    <fullName>Active_for_Divestiture_Program__c</fullName>
    <formula>Divestiture_Site__r.Active_for_Divestiture_Program__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active for Divestiture Program</label>
    <type>Checkbox</type>
</CustomField>