force-app/main/default/objects/Site_Decommission__c/fields/ALL_Permits_Approvals_Received_Actual__c.field-meta.xml
<CustomField>
    <fullName>ALL_Permits_Approvals_Received_Actual__c</fullName>
    <inlineHelpText>Enter 1/1/1900 in place of NA or other text.</inlineHelpText>
    <label>ALL Permits &amp; Approvals Received Actual</label>
    <type>Date</type>
</CustomField>