force-app/main/default/objects/Site_Decommission__c/fields/Amount_Issued__c.field-meta.xml
<CustomField>
    <fullName>Amount_Issued__c</fullName>
    <label>Amount Issued</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>