force-app/main/default/objects/Site_Decommission__c/fields/Backhaul_Shutdown_Date__c.field-meta.xml
<CustomField>
    <fullName>Backhaul_Shutdown_Date__c</fullName>
    <label>Backhaul Shutdown Date (Actual)</label>
    <type>Date</type>
</CustomField>