force-app/main/default/objects/Site_Decommission__c/fields/CD_s_Completed_Actual__c.field-meta.xml
<CustomField>
    <fullName>CD_s_Completed_Actual__c</fullName>
    <label>CD&apos;s Completed Actual</label>
    <type>Date</type>
</CustomField>