force-app/main/default/objects/Site_Decommission__c/fields/CD_s_Required__c.field-meta.xml
<CustomField>
    <fullName>CD_s_Required__c</fullName>
    <label>CD&apos;s Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Redlines Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>