force-app/main/default/objects/Site_Decommission__c/fields/Change_Request_Received_from_GC_Date__c.field-meta.xml
<CustomField>
    <fullName>Change_Request_Received_from_GC_Date__c</fullName>
    <description>A Date field created to capture the Change Request Received from GC Date</description>
    <inlineHelpText>Please enter the Date when we received the Change Request from General Contractor</inlineHelpText>
    <label>Change Request Received from GC Date</label>
    <type>Date</type>
</CustomField>