force-app/main/default/objects/Site_Decommission__c/fields/Closed_Date_MB__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date_MB__c</fullName>
    <label>Closed Date Order Mgmt Salesforce</label>
    <type>Date</type>
</CustomField>