force-app/main/default/objects/Site_Decommission__c/fields/Concrete_Pad_Removal__c.field-meta.xml
<CustomField>
    <fullName>Concrete_Pad_Removal__c</fullName>
    <label>Concrete Pad Removal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>