force-app/main/default/objects/Site_Decommission__c/fields/COP_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>COP_Accepted_Date__c</fullName>
    <label>COP Accepted Date</label>
    <type>Date</type>
</CustomField>