force-app/main/default/objects/Site_Decommission__c/fields/COP_Completed__c.field-meta.xml
<CustomField>
    <fullName>COP_Completed__c</fullName>
    <description>Used to capture if the COP is completed- reporting purposes</description>
    <formula>IF(TEXT(COP_Accepted_Date__c) &lt;&gt;  &quot;&quot;, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to capture if the COP is completed- reporting purposes</inlineHelpText>
    <label>COP Completed</label>
    <type>Checkbox</type>
</CustomField>