force-app/main/default/objects/Site_Decommission__c/fields/COP_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>COP_Received_Date__c</fullName>
    <label>COP Received Date</label>
    <type>Date</type>
</CustomField>