force-app/main/default/objects/Site_Decommission__c/fields/COP_sent_to_MLA_DATE__c.field-meta.xml
<CustomField>
    <fullName>COP_sent_to_MLA_DATE__c</fullName>
    <label>COP sent to MLA DATE</label>
    <type>Date</type>
</CustomField>