force-app/main/default/objects/Site_Decommission__c/fields/Dark_Fiber_Site__c.field-meta.xml
<CustomField>
    <fullName>Dark_Fiber_Site__c</fullName>
    <formula>Divestiture_Site__r.Dark_Fiber_Site__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Changed on the Divestiture Site Record.</inlineHelpText>
    <label>Dark Fiber Site</label>
    <type>Checkbox</type>
</CustomField>