force-app/main/default/objects/Site_Decommission__c/fields/Decommission_Stage__c.field-meta.xml
<CustomField>
    <fullName>Decommission_Stage__c</fullName>
    <label>Deconstruction Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Site Info &amp; Assignment</fullName>
                <label>1.Site Info &amp; Assignment</label>
            </value>
            <value>
                <fullName>Site Survey</fullName>
                <label>2.Site Survey</label>
            </value>
            <value>
                <fullName>Permitting</fullName>
                <label>3.Permitting</label>
            </value>
            <value>
                <fullName>Notice to Proceed</fullName>
                <label>4.Notice to Proceed</label>
            </value>
            <value>
                <fullName>Deconstruction</fullName>
                <label>5.Deconstruction</label>
            </value>
            <value>
                <fullName>Closeout</fullName>
                <label>6.Closeout</label>
            </value>
            <value>
                <fullName>Deconstruction Complete</fullName>
                <label>7.Deconstruction Complete</label>
            </value>
            <value>
                <fullName>Deconstruction Canceled</fullName>
                <label>8.Deconstruction Canceled</label>
            </value>
            <value>
                <fullName>CDs</fullName>
                <isActive>false</isActive>
                <label>CDs</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>