force-app/main/default/objects/Site_Decommission__c/fields/Deconstruction_Phases__c.field-meta.xml
<CustomField>
    <fullName>Deconstruction_Phases__c</fullName>
    <label>Deconstruction Phase</label>
    <length>100</length>
    <type>Text</type>
</CustomField>