force-app/main/default/objects/Site_Decommission__c/fields/Deconstruction_Process_Flow__c.field-meta.xml
<CustomField>
    <fullName>Deconstruction_Process_Flow__c</fullName>
    <formula>IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=068f400000LCHg7&amp;operationContext=CHATTER&amp;contentId=05Tf400001QiICe&quot;, &quot;Sorry not available at this time&quot;, 1200, 2100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deconstruction Process Flow</label>
    <type>Text</type>
</CustomField>