force-app/main/default/objects/Site_Decommission__c/fields/Deconstruction_Team__c.field-meta.xml
<CustomField>
    <fullName>Deconstruction_Team__c</fullName>
    <description>DO NOT CHANGE THIS FIELD WITHOUT TALKING TO ROGERS</description>
    <formula>TEXT(Divestiture_Site__r.Deconstruction_Team__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Responsible for Physical Decom</label>
    <type>Text</type>
</CustomField>