force-app/main/default/objects/Site_Decommission__c/fields/Dish_Option__c.field-meta.xml
<CustomField>
    <fullName>Dish_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dish Option</label>
    <referenceTo>Dish_Option__c</referenceTo>
    <relationshipName>Site_Decommission</relationshipName>
    <type>Lookup</type>
</CustomField>