force-app/main/default/objects/Site_Decommission__c/fields/Dish_Option_Status__c.field-meta.xml
<CustomField>
    <fullName>Dish_Option_Status__c</fullName>
    <formula>TEXT(Dish_Option__r.Dish_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulled from the Dish Option Record</inlineHelpText>
    <label>Dish Option Status</label>
    <type>Text</type>
</CustomField>