force-app/main/default/objects/Site_Decommission__c/fields/Divestiture_Site__c.field-meta.xml
<CustomField>
    <fullName>Divestiture_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Divestiture Site ID</label>
    <referenceTo>Divestiture_Site__c</referenceTo>
    <relationshipLabel>Site Deconstructions</relationshipLabel>
    <relationshipName>Site_Decommission</relationshipName>
    <type>Lookup</type>
</CustomField>