force-app/main/default/objects/Site_Decommission__c/fields/Do_Not_Deconstruct_Before__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Deconstruct_Before__c</fullName>
    <formula>IF( AND( ISNULL(Divestiture_Site__r.Forecasted_Logical_Decommission_Date__c),  ISNULL( Do_Not_Deconstruct_Before_Leasing__c )),NULL,
 IF(Divestiture_Site__r.Forecasted_Logical_Decommission_Date__c  &gt;= Do_Not_Deconstruct_Before_Leasing__c,Divestiture_Site__r.Forecasted_Logical_Decommission_Date__c , 
Do_Not_Deconstruct_Before_Leasing__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Takes the later of the RF Forecasted Off Air and Do Not Deconstruct Before (Leasing) Date.</inlineHelpText>
    <label>Do Not Deconstruct Before</label>
    <type>Date</type>
</CustomField>