force-app/main/default/objects/Site_Decommission__c/fields/Do_Not_DX_Before_Nat_Decon__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_DX_Before_Nat_Decon__c</fullName>
    <inlineHelpText>Manually entered field for Decon team</inlineHelpText>
    <label>Do Not DX Before (National Decon)</label>
    <type>Date</type>
</CustomField>