force-app/main/default/objects/Site_Decommission__c/fields/Drop_Dead_Physical_Decom_Date__c.field-meta.xml
<CustomField>
    <fullName>Drop_Dead_Physical_Decom_Date__c</fullName>
    <formula>Divestiture_Site__r.Drop_Dead_Physical_Decom_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drop Dead Physical Decom Date</label>
    <type>Date</type>
</CustomField>