force-app/main/default/objects/Site_Decommission__c/fields/DX_Actualized__c.field-meta.xml
<CustomField>
    <fullName>DX_Actualized__c</fullName>
    <description>Used for reporting purposes to show if the DX Actual Date is populated</description>
    <formula>IF(TEXT(DX_Start_Actual__c) = &quot;&quot;, False, True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for reporting purposes to show if the DX Actual Date is populated</inlineHelpText>
    <label>DX Actualized</label>
    <type>Checkbox</type>
</CustomField>