force-app/main/default/objects/Site_Decommission__c/fields/DX_Complete_Actual__c.field-meta.xml
<CustomField>
    <fullName>DX_Complete_Actual__c</fullName>
    <inlineHelpText>N/A - will be dated as 01/01/01</inlineHelpText>
    <label>DX Complete Actual</label>
    <type>Date</type>
</CustomField>