force-app/main/default/objects/Site_Decommission__c/fields/DX_Complete_Forecast__c.field-meta.xml
<CustomField>
    <fullName>DX_Complete_Forecast__c</fullName>
    <label>DX Complete Forecast</label>
    <type>Date</type>
</CustomField>