force-app/main/default/objects/Site_Decommission__c/fields/DX_Complete_Forecast_Formula__c.field-meta.xml
<CustomField>
    <fullName>DX_Complete_Forecast_Formula__c</fullName>
    <formula>DX_Complete_Forecast__c + 5</formula>
    <inlineHelpText>Used for deconstruction forecasting to match to t-mobile. but runs in to issues when the year completes/if there are dates that are over.</inlineHelpText>
    <label>DX Complete Forecast Formula</label>
    <type>Date</type>
</CustomField>