force-app/main/default/objects/Site_Decommission__c/fields/DX_Date_Exceeds_NOD__c.field-meta.xml
<CustomField>
    <fullName>DX_Date_Exceeds_NOD__c</fullName>
    <formula>IF(DX_Complete_Forecast__c &gt; Divestiture_Site__r.Notice_of_Decom_NOD__c, TRUE, NULL)</formula>
    <inlineHelpText>When checked, DX complete forecast date is greater than nod date. Must update monitoring trustee reason code.</inlineHelpText>
    <label>DX Date Exceeds NOD</label>
    <type>Checkbox</type>
</CustomField>