force-app/main/default/objects/Site_Decommission__c/fields/DX_Required__c.field-meta.xml
<CustomField>
    <fullName>DX_Required__c</fullName>
    <label>DX Required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>