force-app/main/default/objects/Site_Decommission__c/fields/DX_Start_Actual__c.field-meta.xml
<CustomField>
    <fullName>DX_Start_Actual__c</fullName>
    <label>DX Start Actual</label>
    <type>Date</type>
</CustomField>