force-app/main/default/objects/Site_Decommission__c/fields/DX_Start_Forecast__c.field-meta.xml
<CustomField>
    <fullName>DX_Start_Forecast__c</fullName>
    <inlineHelpText>Backhaul and RF Wilt must be complete and NTP issued by Leasing</inlineHelpText>
    <label>DX Start Forecast</label>
    <type>Date</type>
</CustomField>