force-app/main/default/objects/Site_Decommission__c/fields/DX_Start_to_DX_Comp_Gap__c.field-meta.xml
<CustomField>
    <fullName>DX_Start_to_DX_Comp_Gap__c</fullName>
    <description>time between fields: &quot;DX Start Actual&quot; and &quot;DX Start Complete Actual&quot;</description>
    <formula>DX_Complete_Actual__c - DX_Start_Actual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DX Start to DX Comp Gap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>