force-app/main/default/objects/Site_Decommission__c/fields/DX_Status__c.field-meta.xml
<CustomField>
    <fullName>DX_Status__c</fullName>
    <label>DX Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Projected</fullName>
            </value>
            <value>
                <fullName>Actual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>