force-app/main/default/objects/Site_Decommission__c/fields/DX_Type__c.field-meta.xml
<CustomField>
    <fullName>DX_Type__c</fullName>
    <label>DX Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Antennas Only</fullName>
            </value>
            <value>
                <fullName>Cabinets &amp; Antennas</fullName>
            </value>
            <value>
                <fullName>Cabinets Only</fullName>
            </value>
            <value>
                <fullName>DX Canceled</fullName>
            </value>
            <value>
                <fullName>DX On Hold</fullName>
            </value>
            <value>
                <fullName>Full Deconstruction</fullName>
            </value>
            <value>
                <fullName>Full Deconstruction - Ground Only</fullName>
            </value>
            <value>
                <fullName>Pay &amp; Walk - Radios &amp; Hazmat</fullName>
            </value>
            <value>
                <fullName>P&amp;W+Additional Base</fullName>
            </value>
            <value>
                <fullName>Restoration Only</fullName>
            </value>
            <value>
                <fullName>Site Never Built</fullName>
            </value>
            <value>
                <fullName>Site Walk Only</fullName>
            </value>
            <value>
                <fullName>Site Walk Only - No Equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>