force-app/main/default/objects/Site_Decommission__c/fields/Electrical_Utility_Account_Termination__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Utility_Account_Termination__c</fullName>
    <inlineHelpText>Electrical Utility Account Termination - Decom-Finish
T: (A 4884) - 48</inlineHelpText>
    <label>Electrical Utility Account Termination</label>
    <type>Date</type>
</CustomField>