force-app/main/default/objects/Site_Decommission__c/fields/Enter_Escalation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Enter_Escalation_Comments__c</fullName>
    <inlineHelpText>For Escalation Comments on the deconstruction page. Type in comments here to add a time/date stamp below.</inlineHelpText>
    <label>Enter Escalation Comments</label>
    <type>TextArea</type>
</CustomField>