force-app/main/default/objects/Site_Decommission__c/fields/Escalated_to_Access_Team_Date__c.field-meta.xml
<CustomField>
    <fullName>Escalated_to_Access_Team_Date__c</fullName>
    <label>Escalated to Access Team Date</label>
    <type>Date</type>
</CustomField>