force-app/main/default/objects/Site_Decommission__c/fields/Escalated_To_Legal_Date__c.field-meta.xml
<CustomField>
    <fullName>Escalated_To_Legal_Date__c</fullName>
    <label>Escalated To Legal Date</label>
    <type>Date</type>
</CustomField>