force-app/main/default/objects/Site_Decommission__c/fields/Escalation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Notes__c</fullName>
    <label>Escalation Notes</label>
    <length>25000</length>
    <type>Html</type>
</CustomField>