force-app/main/default/objects/Site_Decommission__c/fields/Escalation_Status__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Status__c</fullName>
    <inlineHelpText>Used for deconstruction escalation process</inlineHelpText>
    <label>Escalation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Pending Landlord Contact Info</fullName>
                <label>Pending LL company info</label>
            </value>
            <value>
                <fullName>Pending LL Signature</fullName>
            </value>
            <value>
                <fullName>Pending T-Mobile Signature</fullName>
            </value>
            <value>
                <fullName>LL Info Received</fullName>
            </value>
            <value>
                <fullName>Escalated to Legal</fullName>
            </value>
            <value>
                <fullName>Pending Check to LL</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Pending MLA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>