force-app/main/default/objects/Site_Decommission__c/fields/F4880_RAN_Wilt_Complete_Finish__c.field-meta.xml
<CustomField>
    <fullName>F4880_RAN_Wilt_Complete_Finish__c</fullName>
    <label>T: (F4880) RAN Wilt Complete</label>
    <type>Date</type>
</CustomField>