force-app/main/default/objects/Site_Decommission__c/fields/Finalized_Backhaul_Midhaul_Fronthaul__c.field-meta.xml
<CustomField>
    <fullName>Finalized_Backhaul_Midhaul_Fronthaul__c</fullName>
    <inlineHelpText>Sprint &amp; Clearwire only</inlineHelpText>
    <label>Finalized Backhaul / Midhaul/ Fronthaul</label>
    <length>55</length>
    <type>Text</type>
</CustomField>