force-app/main/default/objects/Site_Decommission__c/fields/Force_Relocation_Flag__c.field-meta.xml
<CustomField>
    <fullName>Force_Relocation_Flag__c</fullName>
    <formula>Divestiture_Site__r.Forced_Relocation__c</formula>
    <inlineHelpText>Populated from Divest Site</inlineHelpText>
    <label>Force Relocation Flag</label>
    <type>Checkbox</type>
</CustomField>