force-app/main/default/objects/Site_Decommission__c/fields/Forecasted_NTP_Date__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_NTP_Date__c</fullName>
    <inlineHelpText>This field is populating from the Lease negotiation record.</inlineHelpText>
    <label>Forecasted NTP Date</label>
    <type>Date</type>
</CustomField>