force-app/main/default/objects/Site_Decommission__c/fields/GC_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>GC_Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GC Project Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Site_Decommission</relationshipName>
    <type>Lookup</type>
</CustomField>