force-app/main/default/objects/Site_Decommission__c/fields/GC_Project_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>GC_Project_Manager_Email__c</fullName>
    <formula>GC_Project_Manager__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GC Project Manager Email</label>
    <type>Text</type>
</CustomField>