force-app/main/default/objects/Site_Decommission__c/fields/GC_Project_Manager_Phone__c.field-meta.xml
<CustomField>
    <fullName>GC_Project_Manager_Phone__c</fullName>
    <formula>GC_Project_Manager__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GC Project Manager Phone</label>
    <type>Text</type>
</CustomField>