force-app/main/default/objects/Site_Decommission__c/fields/GC_Site_Survey_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>GC_Site_Survey_Complete_Date__c</fullName>
    <label>GC Site Survey Complete Date</label>
    <type>Date</type>
</CustomField>