force-app/main/default/objects/Site_Decommission__c/fields/General_Contractor__c.field-meta.xml
<CustomField>
    <fullName>General_Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>General Contractor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.GC_for_Decom__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Site Deconstructions</relationshipLabel>
    <relationshipName>Site_Decommission</relationshipName>
    <type>Lookup</type>
</CustomField>