force-app/main/default/objects/Site_Decommission__c/fields/Issue_Details__c.field-meta.xml
<CustomField>
    <fullName>Issue_Details__c</fullName>
    <label>Issue Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>