force-app/main/default/objects/Site_Decommission__c/fields/Landlord_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Entity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Look up to the Account record.</inlineHelpText>
    <label>Landlord Entity Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Site Deconstructions (Landlord Entity Name)</relationshipLabel>
    <relationshipName>Site_Deconstructions</relationshipName>
    <type>Lookup</type>
</CustomField>