force-app/main/default/objects/Site_Decommission__c/fields/Landlord_Lease_ID__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Lease_ID__c</fullName>
    <label>Landlord Lease ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>