force-app/main/default/objects/Site_Decommission__c/fields/Landlord_Name_From_SV__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Name_From_SV__c</fullName>
    <label>Landlord Name (From SV)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>