force-app/main/default/objects/Site_Decommission__c/fields/Landlord_Type__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Type__c</fullName>
    <label>Landlord Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>