force-app/main/default/objects/Site_Decommission__c/fields/Lease_Term_End__c.field-meta.xml
<CustomField>
    <fullName>Lease_Term_End__c</fullName>
    <label>Lease Term End</label>
    <length>100</length>
    <type>Text</type>
</CustomField>