force-app/main/default/objects/Site_Decommission__c/fields/Legacy_Company__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Company__c</fullName>
    <formula>TEXT( Divestiture_Site__r.Legacy_Company__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy Company</label>
    <type>Text</type>
</CustomField>