force-app/main/default/objects/Site_Decommission__c/fields/Legacy_Sprint_Market__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Sprint_Market__c</fullName>
    <formula>Divestiture_Site__r.Legacy_Sprint_Market__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy Sprint Market</label>
    <type>Text</type>
</CustomField>