force-app/main/default/objects/Site_Decommission__c/fields/Legal_Issue__c.field-meta.xml
<CustomField>
    <fullName>Legal_Issue__c</fullName>
    <label>Escalated to Legal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>