force-app/main/default/objects/Site_Decommission__c/fields/Legal_Issue_Resolved_Date__c.field-meta.xml
<CustomField>
    <fullName>Legal_Issue_Resolved_Date__c</fullName>
    <label>Legal Issue Resolved Date</label>
    <type>Date</type>
</CustomField>