force-app/main/default/objects/Site_Decommission__c/fields/les_neg_email_sent__c.field-meta.xml
<CustomField>
    <fullName>les_neg_email_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>les neg email sent</label>
    <type>Checkbox</type>
</CustomField>