force-app/main/default/objects/Site_Decommission__c/fields/LL_Check_Amount__c.field-meta.xml
<CustomField>
    <fullName>LL_Check_Amount__c</fullName>
    <label>LL Check Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>