force-app/main/default/objects/Site_Decommission__c/fields/LL_Check_Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>LL_Check_Issued_Date__c</fullName>
    <label>LL Check Issued Date</label>
    <type>Date</type>
</CustomField>